# floor

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
.github/: PAGES_DEPLOYMENT.md
config/: costs.yaml  horizons.yaml  notifications.yaml  pages.yaml  retraining.yaml  risk.yaml  sheets.yaml  strategies.yaml  universe.yaml
docs/: README_REVISION_PESTANAS.md  about.html  first_model_training_run.md  flujo-sistema.html  forecasts.html  indice-conocimiento.md  live_trading_gate.md  m3_horizon.md  models.html  paper_trading_gate.md  release_checklist.md  strategies.html  tickers.html
docs/assets/: app.js  (+4 more)
experimento/: README.md  db_table_audit.py
scripts/: build_readme_presentation.ps1  extract_pdf_text.py  retrain_models.sh  validate_repo.py
site/: drift.html  incidents.html  index.html  models.html  strategies.html
tests/: test_backtest.py  test_calendar.py  test_configs.py  test_db_health_commit_and_main.py  test_drift.py  test_execution.py  test_features.py  test_forecasting.py  test_guardrails.py  test_incident_commander.py  test_inference_smoke.py  test_intraday_cycle.py  test_m3_contract_pipeline.py  test_market_db_pipeline.py  test_model_pipeline_end_to_end.py  test_model_tasks.py  test_models.py  test_no_leakage.py  test_notifications.py  test_pages_build.py  test_persist_competition_and_google_sheets.py  test_persistence_sqlite.py  test_prediction_reconciliation.py  test_select_champion.py  test_session_gating.py  test_site_snapshot.py  test_strategies.py  test_sync_models_file.py  test_train_classic_horizons.py  test_training_review.py  (+3 more)
(+394 files in other folders)
